--- a/scss/main.scss
+++ b/scss/main.scss
@@ -51,7 +51,7 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: #E2D1C3;
+  background-color: #b69d89;
 }
 
 body::-webkit-scrollbar-track {
@@ -82,6 +82,8 @@ body::-webkit-scrollbar-track {
 
   &__menu {
     margin-left: ($w * 109);
+    display: flex;
+    align-items: center;
 
     a {
       position: relative;
@@ -258,6 +260,7 @@ body::-webkit-scrollbar-track {
           line-height: 159.5%;
           color: #492E18;
           width: ($w * 220);
+          margin-bottom: 0;
         }
       }
     }
@@ -483,6 +486,7 @@ body::-webkit-scrollbar-track {
         font-size: ($w * 32);
         line-height: 159.5%;
         color: #492E18;
+        margin-bottom: 0;
       }
     }
   }
@@ -1412,6 +1416,7 @@ body::-webkit-scrollbar-track {
 
 .service {
   padding-top: ($w * 91);
+  padding-bottom: ($w * 100);
 
   &__container {
     max-width: ($w * 1252);
@@ -1462,15 +1467,57 @@ body::-webkit-scrollbar-track {
     }
 
     .card {
-      border-bottom: ($w * 1) solid #CC3312;
+      border-top: 1px solid #CC3312;
+      padding: ($w * 100) 0;
 
-      &:last-child {
-        border-bottom: none;
+      &:first-child {
+        border-top: none;
       }
     }
 
     .card-header {
       padding: 0;
+    }
+
+    .card-body {
+      padding: 0;
+      padding-top: ($w * 50);
+
+      li {
+        display: flex;
+        justify-content: space-between;
+
+        p {
+          margin-bottom: ($w * 30);
+
+          &:first-child {
+            font-size: ($w * 48);
+            line-height: 107.5%;
+            color: #492E18;
+
+            span {
+              font-size: ($w * 40);
+              color: rgba(73, 46, 24, 0.8);
+            }
+          }
+  
+          &:last-child {
+            width: ($w * 512);
+            font-style: italic;
+            font-weight: 400;
+            font-size: ($w * 46);
+            line-height: 107.5%;
+            color: #492E18;
+          }
+        }
+
+        &:last-child {
+
+          p {
+            margin-bottom: 0;
+          }
+        }
+      }
     }
 
     .accordion .card-header button {
@@ -1479,6 +1526,7 @@ body::-webkit-scrollbar-track {
 
     .btn-link {
       text-decoration: none;
+      padding: 0;
     }
   
     .btn.focus, .btn:focus {
@@ -1486,7 +1534,84 @@ body::-webkit-scrollbar-track {
       box-shadow: none; 
     }
   }
+  &__accord {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
+    h3 {
+      font-size: ($w * 48);
+      font-weight: 500;
+      line-height: 97.3%;
+      color: #492E18;
+      margin-bottom: 0;
+    }
+
+    &-wrap {
+      position: relative;
+      width: ($w * 512);
+
+      &-text {
+        font-style: italic;
+        font-weight: 400;
+        font-size: ($w * 48);
+        line-height: 97.3%;
+        color: #492E18;
+        margin-bottom: 0;
+      }
+    }
+
+    &-arrow {
+      width: ($w * 110);
+      height: ($w * 22);
+      position: absolute;
+      right: 0;
+      top: ($w * 10);
+      transition: all .3s ease 0s;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  .accordion {
+
+    button:not(.collapsed) {
+
+      .service__accord-arrow {
+        transform: rotate(90deg);
+        transition: all .3s ease 0s;
+        top: ($w * 40);
+        right: ($w * -35);
+      }
+    }
+  }
+
+  &__btn {
+    display: flex;
+    justify-content: end;
+
+    a {
+      position: relative;
+      max-width: ($w * 260);
+      width: 100%;
+      
+      img {
+        width: 100%;
+      }
+
+      span {
+        position: absolute;
+        bottom: ($w * 0);
+        left: ($w * -110);
+        font-weight: 500;
+        font-size: ($w * 48);
+        line-height: 159.5%;
+        color: #492E18;
+      }
+    }
+  }
 }
 
 .footer__services {
