--- a/css/main.css
+++ b/css/main.css
@@ -252,7 +252,7 @@ body::-webkit-scrollbar-track {
 }
 .header__container {
   padding: 0.9523809524vw 0;
-  max-width: 62.380952381vw;
+  max-width: 59.619047619vw;
   width: 100%;
   margin: 0 auto;
   display: flex;
@@ -312,7 +312,7 @@ body::-webkit-scrollbar-track {
 }
 .inject__container {
   display: flex;
-  max-width: 72.380952381vw;
+  max-width: 69.5238095238vw;
   width: 100%;
   margin: 0 auto;
 }
@@ -1041,7 +1041,7 @@ body::-webkit-scrollbar-track {
 }
 
 .edu {
-  background: url("../img/ed-bg.png") bottom/contain no-repeat;
+  background: url("../img/ed-bg.png") top/cover no-repeat;
 }
 .edu__container {
   max-width: 59.619047619vw;
