--- a/scss/main.scss
+++ b/scss/main.scss
@@ -71,7 +71,7 @@ body::-webkit-scrollbar-track {
   
   &__container {
     padding: ($w * 20) 0;
-    max-width: ($w * 1310);
+    max-width: ($w * 1252);
     width: 100%;
     margin: 0 auto;
     display: flex;
@@ -142,7 +142,7 @@ body::-webkit-scrollbar-track {
 
   &__container {
     display: flex;
-    max-width: ($w * 1520);
+    max-width: ($w * 1460);
     width: 100%;
     margin: 0 auto;
   }
@@ -1006,7 +1006,7 @@ body::-webkit-scrollbar-track {
 }
 
 .edu {
-  background: url("../img/ed-bg.png") bottom / contain no-repeat;
+  background: url("../img/ed-bg.png") top / cover no-repeat;
 
   &__container {
     max-width: ($w * 1252);
