--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1223,6 +1223,7 @@ body::-webkit-scrollbar-track {
         padding: ($w * 20) ($w * 20) ($w * 40);
         padding-left: ($w * 70);
         box-shadow: 0px ($w * 5) ($w * 10) rgba(0, 0, 0, 0.19);
+        -webkit-transform: translate3d(0,0,0);
 
         &::after {
           content: '';
