--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1251,7 +1251,8 @@ body::-webkit-scrollbar-track {
              linear-gradient(#fff 0 0) content-box, 
              linear-gradient(#fff 0 0);
           -webkit-mask-composite: destination-out; 
-          mask-composite: exclude; 
+          mask-composite: exclude;
+          -webkit-transform: translate3d(0,0,100px);
         }
 
         &:nth-child(2) { z-index: 10; transform: translate3d(0, 0, 200px);}
